@@ -13,6 +13,7 @@ x.x:
 - fixed: cleanup of all membership requests on accept/decline
 - fixed: problem with incomplete CSS/JS on subsite create
 - fixed: problem with some plugins not activating on subsite create
+- fixed: livesearch now limits groups to the current site
 
 2.1 (2013-04-05):
 - changed: made compatible with Elgg 1.8.14
